@@ -1,5 +1,6 @@
 [COLOR blue][B]Skin Estuary uMod2[/B][/COLOR]
-[COLOR green][B]•3.0.5[/B]MaxEDITion beta.[/COLOR]
+[COLOR green][B]•3.0.7[/B]Minor changes.[/COLOR]
+[COLOR yellow][B]•3.0.5[/B]MaxEDITion beta.[/COLOR]
 [COLOR yellow][B]•2.2.8[/B] Initial beta test.[/COLOR]
 [COLOR yellow][B]•2.2.5[/B] Initial beta.[/COLOR]
 [COLOR yellow][B]•2.0.2[/B] Home modded.[/COLOR]
